[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/flashlight-light.png" type="Texture" id=1]
[ext_resource path="res://assets/images/flashlight.png" type="Texture" id=2]
[ext_resource path="res://objects/Flashlight.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 130, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 100, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 130, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 115, 10 )

[node name="Flashlight" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 75, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 75, 0 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 75, 0 )
texture = ExtResource( 1 )
offset = Vector2( 122, 0 )
color = Color( 0.00784314, 1, 0.933333, 1 )
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 2.0

[node name="EnemyDetect2" type="Area2D" parent="Light2D"]
position = Vector2( -50, 0 )
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Light2D/EnemyDetect2"]
position = Vector2( 139.652, -34.2859 )
rotation = -0.226893
shape = SubResource( 2 )

[node name="EnemyDetect6" type="Area2D" parent="Light2D"]
position = Vector2( -50, 0 )
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Light2D/EnemyDetect6"]
position = Vector2( 175.568, 0.602058 )
rotation = -0.226893
shape = SubResource( 3 )

[node name="EnemyDetect7" type="Area2D" parent="Light2D"]
position = Vector2( -50, 0 )
scale = Vector2( 1, -1 )
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Light2D/EnemyDetect7"]
position = Vector2( 174.477, 1.79602 )
rotation = -0.226893
shape = SubResource( 3 )

[node name="EnemyDetect8" type="Area2D" parent="Light2D"]
position = Vector2( -50, 0 )
scale = Vector2( 1, -1 )
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Light2D/EnemyDetect8"]
position = Vector2( 142, 0 )
shape = SubResource( 4 )

[node name="EnemyDetect4" type="Area2D" parent="Light2D"]
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Light2D/EnemyDetect4"]
position = Vector2( 107.039, -15.8886 )
rotation = -0.226893
shape = SubResource( 5 )

[node name="EnemyDetect5" type="Area2D" parent="Light2D"]
scale = Vector2( 1, -1 )
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Light2D/EnemyDetect5"]
position = Vector2( 107.039, -15.8886 )
rotation = -0.226893
shape = SubResource( 5 )

[node name="EnemyDetect3" type="Area2D" parent="Light2D"]
position = Vector2( -50, 0 )
scale = Vector2( 1, -1 )
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Light2D/EnemyDetect3"]
position = Vector2( 139.652, -34.2859 )
rotation = -0.226893
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Flashlight_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Flashlight_body_exited"]
